# virtual-entity

./: .gitignore  README.md  analysis-features.md  analysis-tech.md  analysis-ux.md  install.sh  项目介绍.html
docs/: 即梦API集成方案.md  即梦测试报告.md  方案优化分析.md  最终实施方案.md  相关项目调研.md  自动化方案可行性评估报告.md
jimeng-image-generator/: SKILL.md
jimeng-selfie-app/: README.md  main.py  pyproject.toml  requirements.txt
jimeng-selfie-app/app/: __init__.py  cli.py  config.py  jimeng_api.py  strategy.py
jimeng-selfie-planner-team/: config.json
jimeng-selfie-planner-team/inboxes/: clawra-analyst.json  cli-designer.json  jimeng-api-researcher.json  reference-image-designer.json  selfie-strategy-designer.json  team-lead.json
jimeng-selfie-planner-team/tasks/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
skills/social-media-automation/: SKILL.md
skills/virtual-entity/: SKILL.md
tests/: __init__.py  conftest.py  run_tests.py  test_installation.py
原文件/: AGENTS.md  IDENTITY.md  SOUL.md
原文件/11/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  MEMORY_TEST.md  SOUL.md  TOOLS.md  USER.md  diary.md
原文件/记忆/: 2026-02-06.md
